
2005-08-04  Graham Percival  <gperlist@shaw.ca>

	* ly/bagpipe.ly: new file.

	* THANKS: added Sven Axelsson.

2005-08-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/spacing-engraver.cc (stop_translation_timestep): directly
	copy proportionalNotationDuration into currentMusicalColumn if
	set.

	* lily/spacing-spanner.cc (musical_column_spacing): if
	uniform-stretching set, fixed space is 0.0

	* input/regression/spacing-multi-tuplet.ly: show uniform-stretching property.

	* lily/spacing-spanner.cc (effective_shortest_duration): new function.

	* lily/include/spacing-spanner.hh (class Spacing_spanner): new file.
	(struct Spacing_options): new struct.

	* lily/spacing-basic.cc: new file.

	* lily/spacing-spanner.cc (note_spacing): remove outdated code:
	delta_t doesn't have to be smaller than shortest_playing_len

2005-08-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/markup-arrows.ly:  new file.

	* lily/tuplet-bracket.cc: document new behavior.

	* input/regression/tuplet-broken.ly: new file. Demonstrate tuplets
	with line breaks.

	* scm/define-markup-commands.scm (arrow-head): arrow-head markup command.

	* scm/define-grobs.scm (all-grob-descriptions): set arrows as
	default 

	* lily/tuplet-bracket.cc: add edge-text property.
	add break-overshoot.
	(print): read break-overshoot.
	(print): read edge-text, add stencils.

	* mf/feta-arrow.mf: new file.

	* mf/feta-generic.mf: add feta-arrow.

2005-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely (An example of a
	musicological document): Added flag -o to dvips for people who use
	the default setting in teTeX where output is sent to the printer. 

	* Documentation/user/global.itely (Vertical spacing): Added
	reference to the Axis_group_engraver which documents the *Extent
	properties.

2005-08-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/basic-notation.itely (Tuplets): add note
	about nested tuplets. Remove BUG. 
